--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -4,11 +4,25 @@
   padding: 2rem 3rem;
   width: 100%;
   display: flex;
+
   flex-direction: column;
   overflow-y: scroll;
   gap: 2rem;
 }
 
+@media (max-width: 500px) {
+  .form {
+    display: flex;
+
+    gap: 2rem;
+  }
+  .rows {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .row {
   display: flex;
   flex-direction: column;
@@ -28,7 +42,13 @@
   font-size: 2.8rem;
   color: #1f1a1a;
 }
-
+@media (max-width: 500px) {
+  .flag {
+    right: 1rem;
+    top: 2.7rem;
+    font-size: 2rem;
+  }
+}
 .form.loading {
   opacity: 0.3;
 }
