--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -3,5 +3,12 @@
   padding: 2.4rem;
   overscroll-behavior-y: none;
   display: flex;
+  flex-direction: row;
   position: relative;
+}
+@media (max-width: 500px) {
+  .app {
+    min-height: 100vh;
+    flex-direction: column;
+  }
 }
